--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,12 @@
 services:
   - type: web
-    name: music-api
+    name: rakib-music-api
     env: node
     plan: free
     buildCommand: |
       apt-get update
-      apt-get install -y ffmpeg python3 python3-pip
+      apt-get install -y python3 python3-pip ffmpeg
       pip3 install -U yt-dlp
+      yt-dlp --version
       npm install
-    startCommand: npm start
+    startCommand: node index.js
