--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,7 @@ services:
       apt-get update
       apt-get install -y python3 python3-pip ffmpeg
       pip3 install -U yt-dlp
+      which yt-dlp
       yt-dlp --version
       npm install
     startCommand: node index.js
