--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,6 @@ services:
       apt-get update
       apt-get install -y python3 python3-pip ffmpeg
       pip3 install -U yt-dlp
-      which yt-dlp
-      yt-dlp --version
+      python3 -m yt_dlp --version
       npm install
     startCommand: node index.js
