--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
       apt-get update
       apt-get install -y python3 python3-pip ffmpeg
       pip3 install --user -U yt-dlp
-      export PATH=$PATH:/root/.local/bin
+      chmod +x /root/.local/bin/yt-dlp
       /root/.local/bin/yt-dlp --version
       npm install
     startCommand: node index.js
