--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "youtube-sr": "^4.3.11"
+    "express": "^4.18.2"
   }
 }
